fix contrast error

--- a/assets/style.css
+++ b/assets/style.css
@@ -103,7 +103,7 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #beb45a;
+  background-color: #7f782f;
   border-radius: 0;
 }
 
